	
CCH:
- (20/05/04) Replacing the old 'Write', 'Fill' and 'Read' method.

CTN:
- Adding a 'FlushTest()' to '=' operator in debug mode.
- (23/04/04) Adding a test in debug mode to avoid retrieving of an undefined item.
- (10/05/04) Fixing 'Delete()' bug.

DTE:
- (15/04/04) Introducing the new structure.
- (21/07/04) Improving some features about the thread-safeness of this library.

EPEIOS:
- (15/06/04) Adding some useful constants.

EPSMSC:
- Adding 'EPSMSC_COPYRIGHT()' macro.

ERR:
- Adding some minor features for the 'Intentional' error type.
- (24/05/04) Using the 'cio' library instead of 'stf'.

FLW:
- (24/05/04) Removing the a tailing '_' to the object name.
- (17/07/04) Adding amount of data red/written handling.
-			 Renaming some methods.
- (20/07/04) Improvements.

FLX:
- (31/07/04) The 'bunch_(i|o)flow__' now works with all type of bunch.

HTP:
- (18/07/04) little improvements.

IDXBTR
- Fixing bug in the 'tree_index_::Remove()' function

LCK:
- Adding 'GetUnlocked()' method.

MDR:
- (15/06/04) Adding some useful constants.

MMG:
- (19/07/04) Adapting to changes in 'FLW' library.

MMM:
- (14/07/04) Using the 'CIO' library instead of 'STF'.

MTX:
- (31/07/04) Adding a 'Delay' parameter for locking functions.

SSNMNG:
- Using own row type for session id 'row__'.
- Adding 'sessions_manager_::IsValid()' method.
- Adding 'sessions_manager_::GetExpired()' methods.
- Adding navigation 'sessions_manager_::First()', 'sessions_manager_::Next()', ...) methods.
- (22/03/04) Fixing bug in session id creation.

STF:
- (24/05/04) Removing the console stuff (they are put in 'CIO' library).
- (24/05/04) Adating to changes in 'FLW' library.
- (24/05/04) Renaming the objects ('stream...' instead'(i|o)stream...', removing one tailing '_')

TOL:
- Adding the 'E_DISCLOSE_(_)' macro.
- (05/05/04) Adding a 'Clock()' temporary workaround for CW.
- (24/05/04) Using 'cio' library instead of 'stf'.
- (24/06/04) Adding 'E_TTYPEDEF' macro.